tests/Metalama.Framework.Tests.Integration/Tests/Aspects/InvalidCode/IncompleteType.cs
using Metalama.Framework.Aspects;

namespace Metalama.Framework.Tests.Integration.Tests.Aspects.InvalidCode.IncompleteType;

#if TESTRUNNER
class Aspect :

[Aspect]
class Target;
#endif